# miles-to-muppets

./: README.md  index.html  links.txt  main.py  miles-to-muppets.py  pyproject.toml  pyscript.toml  style.css  testrun.py
README.md/: README.md
py-src/: main.py
src/milesToMuppets/: __init__.py  data.py  functions.py  helpers.py  miles-to-muppets.py  muppet.py
src/milesToMuppets/txt/: links.txt
txt/: colors.txt  image sources.txt  links.txt  notes.txt
unused/: .gitignore  pyscript.toml
