[build-system]
requires = ["hatchling, os, base64, sys, time, requests"]
build-backend = "hatchling.build"

[project]
name = "miles to muppets - Sketched Doughnut"
version = "0.0.1"
authors = [
  { name="Sketched Doughnut", email="author@example.com" },
]
description = "A conversion package that converts a mile value to muppets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"